feat: implementation migrations for database

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,11 @@
   "scripts": {
     "start": "nodemon src/server.js",
     "dev:debug": "nodemon --inspect src/server.js",
-    "lint:fix": "yarn eslint --fix src --ext .js"
+    "lint:fix": "yarn eslint --fix src --ext .js",
+    "create:migration": "sequelize migration:create --name=create-users",
+    "db:migrate": "sequelize db:migrate",
+    "db:migrate:undo": "sequelize db:migrate:undo",
+    "db:migrate:undo:all": "sequelize db:migrate:undo:all"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
