--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "db:migrate:undo:all": "sequelize db:migrate:undo:all"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^7.17.1",
