--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3",
-    "yup": "^0.28.1"
+    "yup": "^0.28.1",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
